--- a/Aquarium/res/layout-sw600dp/fragment_bluetang.xml
+++ b/Aquarium/res/layout-sw600dp/fragment_bluetang.xml
@@ -13,13 +13,14 @@
         android:textSize="32sp" />
 
     <ImageView
-        android:id="@+id/angelfish_image"
+        android:id="@+id/bluetang_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:contentDescription="@string/bluetang"
-        android:src="@drawable/bluetang" />
+        android:src="@drawable/bluetang"
+        android:onClick="onClick" />
 
     <ScrollView
         android:layout_width="wrap_content"
