--- a/Aquarium/res/layout-sw600dp/fragment_harlequin.xml
+++ b/Aquarium/res/layout-sw600dp/fragment_harlequin.xml
@@ -19,7 +19,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:contentDescription="@string/harlequin"
-        android:src="@drawable/harlequin" />
+        android:src="@drawable/harlequin"
+        android:onClick="onClick" />
 
     <ScrollView
         android:layout_width="wrap_content"
