--- a/Aquarium/res/layout-sw600dp/fragment_hawkfish.xml
+++ b/Aquarium/res/layout-sw600dp/fragment_hawkfish.xml
@@ -19,7 +19,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:contentDescription="@string/hawkfish"
-        android:src="@drawable/hawkfish" />
+        android:src="@drawable/hawkfish" 
+        android:onClick="onClick"/>
 
     <ScrollView
         android:layout_width="wrap_content"
