--- a/Aquarium/res/layout-sw600dp/fragment_saddlebass.xml
+++ b/Aquarium/res/layout-sw600dp/fragment_saddlebass.xml
@@ -19,7 +19,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:contentDescription="@string/saddlebass"
-        android:src="@drawable/saddlebass" />
+        android:src="@drawable/saddlebass"
+        android:onClick="onClick" />
 
     <ScrollView
         android:layout_width="wrap_content"
