--- a/Aquarium/res/layout-sw600dp/fragment_serpentstar.xml
+++ b/Aquarium/res/layout-sw600dp/fragment_serpentstar.xml
@@ -19,7 +19,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:contentDescription="@string/redstar"
-        android:src="@drawable/redstar" />
+        android:src="@drawable/redstar"
+        android:onClick="onClick" />
 
     <ScrollView
         android:layout_width="wrap_content"
