--- a/Aquarium/res/layout-sw600dp/fragment_yellowwrasse.xml
+++ b/Aquarium/res/layout-sw600dp/fragment_yellowwrasse.xml
@@ -19,7 +19,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:contentDescription="@string/yellowhead"
-        android:src="@drawable/wrasse" />
+        android:src="@drawable/wrasse"
+        android:onClick="onClick" />
 
     <ScrollView
         android:layout_width="wrap_content"
