--- a/Aquarium/res/layout-sw600dp/fragment_clownwrasse.xml
+++ b/Aquarium/res/layout-sw600dp/fragment_clownwrasse.xml
@@ -19,7 +19,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:contentDescription="@string/clownwrasse"
-        android:src="@drawable/clownwrasse" />
+        android:src="@drawable/clownwrasse"
+        android:onClick="onClick" />
 
     <ScrollView
         android:layout_width="wrap_content"
