--- a/Aquarium/res/layout-sw600dp/fragment_sergeantmajor.xml
+++ b/Aquarium/res/layout-sw600dp/fragment_sergeantmajor.xml
@@ -19,7 +19,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:contentDescription="@string/sergeantmajor"
-        android:src="@drawable/sergeantmajor" />
+        android:src="@drawable/sergeantmajor"
+        android:onClick="onClick" />
 
     <ScrollView
         android:layout_width="wrap_content"
