--- a/Aquarium/res/layout-sw600dp/fragment_shogfish.xml
+++ b/Aquarium/res/layout-sw600dp/fragment_shogfish.xml
@@ -19,7 +19,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:contentDescription="@string/shogfish"
-        android:src="@drawable/shogfish" />
+        android:src="@drawable/shogfish"
+        android:onClick="onClick" />
 
     <ScrollView
         android:layout_width="wrap_content"
