Added all Dialog Boxes for all remaining tanks

--- a/Aquarium/res/layout-sw600dp/fragment_dogfish.xml
+++ b/Aquarium/res/layout-sw600dp/fragment_dogfish.xml
@@ -19,7 +19,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:contentDescription="@string/dogfish"
-        android:src="@drawable/dogfish" />
+        android:src="@drawable/dogfish"
+        android:onClick="onClick" />
 
     <ScrollView
         android:layout_width="wrap_content"
