--- a/Aquarium/res/layout-sw600dp/fragment_burrfish.xml
+++ b/Aquarium/res/layout-sw600dp/fragment_burrfish.xml
@@ -19,7 +19,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:contentDescription="@string/burrfish"
-        android:src="@drawable/burrfish" />
+        android:src="@drawable/burrfish"
+        android:onClick="onClick" />
 
     <ScrollView
         android:layout_width="wrap_content"
