--- a/Aquarium/res/layout-sw600dp/fragment_catshark.xml
+++ b/Aquarium/res/layout-sw600dp/fragment_catshark.xml
@@ -19,7 +19,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:contentDescription="@string/catshark"
-        android:src="@drawable/catshark" />
+        android:src="@drawable/catshark"
+        android:onClick="onClick" />
 
     <ScrollView
         android:layout_width="wrap_content"
