--- a/Aquarium/res/layout-sw600dp/fragment_horseconch.xml
+++ b/Aquarium/res/layout-sw600dp/fragment_horseconch.xml
@@ -19,7 +19,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:contentDescription="@string/horseconch"
-        android:src="@drawable/horseconch" />
+        android:src="@drawable/horseconch" 
+        android:onClick="onClick"/>
 
     <ScrollView
         android:layout_width="wrap_content"
