--- a/Aquarium/res/layout-sw600dp/fragment_scorpionfish.xml
+++ b/Aquarium/res/layout-sw600dp/fragment_scorpionfish.xml
@@ -19,7 +19,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:contentDescription="@string/scorpionfish"
-        android:src="@drawable/scorpionfish" />
+        android:src="@drawable/scorpionfish"
+        android:onClick="onClick" />
 
     <ScrollView
         android:layout_width="wrap_content"
