--- a/Aquarium/res/layout-sw600dp/fragment_slipperlobster.xml
+++ b/Aquarium/res/layout-sw600dp/fragment_slipperlobster.xml
@@ -19,7 +19,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:contentDescription="@string/slipperlobster"
-        android:src="@drawable/slipper" />
+        android:src="@drawable/slipper"
+        android:onClick="onClick" />
 
     <ScrollView
         android:layout_width="wrap_content"
