--- a/Aquarium/res/layout-sw600dp/fragment_spinylobster.xml
+++ b/Aquarium/res/layout-sw600dp/fragment_spinylobster.xml
@@ -19,7 +19,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:contentDescription="@string/spinylobster"
-        android:src="@drawable/spinylobster" />
+        android:src="@drawable/spinylobster"
+        android:onClick="onClick" />
 
     <ScrollView
         android:layout_width="wrap_content"
