--- a/Aquarium/res/layout/fragment_burrfish.xml
+++ b/Aquarium/res/layout/fragment_burrfish.xml
@@ -1,37 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="wrap_content"
+    android:orientation="vertical" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/burrfish_image"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:contentDescription="@string/burrfish"
+        android:onClick="onClick"
+        android:src="@drawable/burrfish" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:text="@string/burrfish"
+        android:textSize="22sp"
+        android:textStyle="bold" />
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="223dp"
+        android:layout_gravity="center"
+        android:fillViewport="true"
+        android:background="#73000000" >
 
         <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:text="@string/burrfish"
-            android:textSize="32sp" />
-
-        <TextView
-            android:layout_width="fill_parent"
+            android:layout_width="286dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:text="@string/burrfish_desc"
-            android:textSize="16sp" />
+            android:textSize="15sp"
+            android:textColor="#FFFFFF" />
+    </ScrollView>
 
-        <ImageView
-            android:id="@+id/burrfish_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:contentDescription="@string/burrfish"
-            android:src="@drawable/burrfish" />
-    </LinearLayout>
-
-</ScrollView>
+</LinearLayout>
