--- a/Aquarium/res/layout/fragment_porkfish.xml
+++ b/Aquarium/res/layout/fragment_porkfish.xml
@@ -15,14 +15,16 @@
         android:src="@drawable/porkfish" />
 
     <TextView
-        android:layout_width="fill_parent"
+        android:layout_width="296dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
+        android:background="#A60066cc"
         android:gravity="center"
         android:text="@string/porkfish"
+        android:textColor="#FFFFFF"
         android:textSize="22sp"
         android:textStyle="bold" />
-
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="223dp"
