--- a/Aquarium/res/layout/fragment_saddlebass.xml
+++ b/Aquarium/res/layout/fragment_saddlebass.xml
@@ -14,12 +14,15 @@
         android:onClick="onClick"
         android:src="@drawable/saddlebass" />
 
-    <TextView
-        android:layout_width="fill_parent"
+   <TextView
+        android:layout_width="296dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
+        android:background="#A60066cc"
         android:gravity="center"
         android:text="@string/saddlebass"
+        android:textColor="#FFFFFF"
         android:textSize="22sp"
         android:textStyle="bold" />
 
