--- a/Aquarium/res/layout/tank_layout.xml
+++ b/Aquarium/res/layout/tank_layout.xml
@@ -181,6 +181,23 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="#FFFFFF" >
+
+            <Button
+                android:id="@+id/back_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/back"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:onClick="onClick" >
+            </Button>
+        </LinearLayout>
     </LinearLayout>
 
 </ScrollView>
