--- a/Aquarium/res/layout-sw600dp/fragment_doctorfish.xml
+++ b/Aquarium/res/layout-sw600dp/fragment_doctorfish.xml
@@ -5,10 +5,11 @@
     android:orientation="vertical" >
 
     <ImageView
-        android:id="@+id/doctofish_image"
+        android:id="@+id/doctorfish_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="50dp"
         android:contentDescription="@string/doctorfish"
         android:onClick="onClick"
         android:src="@drawable/doctorfish" />
@@ -17,6 +18,7 @@
         android:layout_width="398dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="150dp"
         android:background="#A60066cc"
         android:gravity="center"
         android:padding="8dp"
@@ -29,7 +31,7 @@
         android:layout_width="398dp"
         android:layout_height="223dp"
         android:layout_gravity="center"
-        android:background="#73000000"
+        android:background="#B3000000"
         android:fillViewport="true" >
 
         <TextView
